exports[`test Click on Story to showTasksForStoryId 1`] = `
<a
  className="story_card list-group-item"
  href="#"
  onClick={[Function]}>
  test
</a>
`;

exports[`test Click on Story to showTasksForStoryId 2`] = `
<a
  className="story_card list-group-item"
  href="#"
  onClick={[Function]}>
  test2
</a>
`;

exports[`test Render Html with Name 1`] = `
<a
  className="story_card list-group-item"
  href="#"
  onClick={[Function]}>
  test
</a>
`;
